# rusty_reader

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  credentials.toml.template  docker-compose.yml  feeds.toml  feeds.toml.template  justfile  package-lock.json  package.json  readme.md
assets/: index.html  main.js  main.ts  style.css
assets/scss/: style.scss
src/: articles.rs  channel.rs  display.rs  feed.rs  gpt.rs  main.rs  style.css  wallpaper.rs
