[package]
name = "rusty_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-extra = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "compression-br"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RSS feed
reqwest = { version = "0.11.18", features = ["json"] }
sled = "0.34.7"
atom_syndication = { version = "0.12.2", features = ["with-serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
color-thief = "0.2.2"
